<resources>
    <string name="app_name">Labels Whispering</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="facebook_app_id">554194348079649</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="input_title">Enter a title</string>
    <string name="input_description">Enter a description</string>
    <string name="submit_button">Submit</string>
    <string name="title_activity_register">Register</string>
    <string name="action_logout">Log out</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign up</string>
    <string name="password_label">Password</string>
    <string name="already_have_an_account_label">Already Have An Account? Log In!</string>
    <string name="log_in">Log in</string>
    <string name="dont_have_an_account_label">Do you have an account? Register!</string>
    <string name="menuitem_refresh">Refresh</string>
    <string name="forgot_password"><u>Forgot password</u></string>
    <string name="facebook_login_button_label">Log in with Facebook</string>
    <string name="twitter_login_button_label">Log in with Twitter</string>
    <string name="wait">Please wait</string>
    <string name="loading">Loading</string>
    <string name="Settings">Setting</string>
    <string name="how_often">How Often</string>
    <string name="amount">Amount</string>
    <string name="bedtime">Bedtime</string>
    <string name="evening">Evening</string>
    <string name="per_day">Per Day</string>
    <string name="morning">Morning</string>
    <string name="noon">Noon</string>
    <string name="alert_morning">Set Alert of Morning</string>
    <string name="alert_afternoon">Set alert time of afternoon</string>
    <string name="alert_evening">Set alert time of evening</string>
    <string name="alert_bedtime">Set alert time of bedtime</string>
    <string name="title_activity_detail__time2_eat">Detail_Time2Eat</string>
    <string name="search_hint">Search Medicine</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="any_orientation">1D Any Orientation</string>
    <string name="scan_from_fragment">Scan from fragment</string>
    <string name="front_camera">Front Camera</string>
    <string name="custom_activity">Continuous Scan</string>
    <string name="toolbar_activity">Activity with Toolbar</string>
    <string name="custom_scanner">Custom Scanner Activity</string>
    <string name="show_no_result">No results matched the given search terms</string>
    <string name="image_of_ocr">Image of OCR</string>
    <string name="AutoFocusOn">Auto focus on</string>
    <string name="AutoFocusOff">Auto focus off</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="flash_on">Flash on</string>
    <string name="search">Search</string>
    <string name="view_your_profile">View your profile</string>
    <string name="ocr">OCR</string>
    <string name="trade_name">Trade name</string>
    <string name="general_symptom">General symptom</string>
    <string name="bad_symptom">Bad symptom</string>
    <string name="if_forget_to_take">If forget to take</string>
    <string name="type">Type</string>
    <string name="properties">Properties</string>
    <string name="set_schedule">Set Schedule</string>
    <string name="email">Email</string>
    <string name="title_activity_detail__schedule">Detail_Schedule</string>
    <string name="DefaultTime">08:00</string>
    <string name="Snooze">Snooze</string>
    <string name="Stop">Stop</string>
    <string name="PreferenceCurrentSummary">Current value is:</string>
    <string name="PreferenceAlarmSettings">Alarm Settings</string>
    <string name="PreferenceAlarmNoiseKey">Audio</string>
    <string name="PreferenceAlarmNoiseTitle">Alarm Noise</string>
    <string name="PreferenceSnoozeLater">Snooze later time</string>
    <string name="PreferenceSnoozeLaterSummary">Set snooze later time(minutes)</string>
    <string name="PreferenceRepeat">Repeat</string>
    <string name="PreferenceRepeatSummary">How many times to allow snooze\n(0 for infinity, 1 for none)</string>
    <string name="PreferenceShowNotificationKey">ShowNotification</string>
    <string name="PreferenceShowNotificationTitle">Show Notification</string>
    <string name="PreferenceShowNotificationSummary">Show notification when the alarm is set</string>
    <string name="PreferenceUseDefaultTimeKey">UseDefaultTime</string>
    <string name="PreferenceUseDefaultTimeTitle">Use Default Time</string>
    <string name="PreferenceUseDefaultTimeSummary">Application will start with a defined time</string>
    <string name="PreferenceDefaultTimeKey">DefaultTime</string>
    <string name="PreferenceDefaultTimeTitle">Default Time</string>
    <string name="PreferenceDefaultTimeSummary">The default time the application will start with</string>
    <string name="PreferenceCloseApplicationSettings">Close Application Settings</string>
    <string name="PreferenceCloseOnSetKey">CloseOnSet</string>
    <string name="PreferenceCloseOnSetTitle">Set and close</string>
    <string name="PreferenceCloseOnSetSummary">Close main screen when alarm is set</string>
    <string name="PreferenceCloseOnCancelKey">CloseOnCancel</string>
    <string name="PreferenceCloseOnCancelTitle">Cancel and close</string>
    <string name="PreferenceCloseOnCancelSummary">Close main screen when alarm is canceled</string>
    <string name="PreferenceShowTimeLeftKey">ShowTimeLeft</string>
    <string name="PreferenceShowTimeLeftTitle">Show time left</string>
    <string name="PreferenceShowTimeLeftSummary">Show how much time is left unitl next alarm - if disabled it will only show "Alarm is set."</string>
    <string name="Set">Set</string>
    <string name="property">Property</string>
    <string name="how_to_take">How to take</string>
    <string name="if_forget">If forget</string>
    <string name="side_effect">Side effect</string>
    <string name="how_to_keep">How to keep</string>
    <string name="picture">Picture</string>
    <string name="app_settings">App settings</string>
    <string name="help_center">Help Center</string>
    <string name="report">Report</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="Cancel">Cancle</string>
    <string name="unsaved_medicine">Unsaved medicine!</string>
    <string name="added_to_schedule">Added to schedule.</string>
    <string name="remove_this_alarm">Remove this alarm</string>
    <string name="medicine_has_add">Medicine had added.</string>
    <string name="language_not_support">Language not supported</string>
    <string name="want_to_logout">Do you want to log out?</string>
    <string name="remove">Remove</string>
    <string name="schedule">Schedule</string>
    <string name="schedule_has_removed">Schedule has removed.</string>
    <string name="medicine_box">Medicine box</string>
    <string name="User">User</string>
    <string name="Profile">Profile</string>
    <string name="offline_mode">App\'s running in offline mode.</string>
    <string name="silent">Silent</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="ringtoneTitle">Ringtone</string>
    <string name="ringtoneSummary">Ringtone: %s</string>
    <string name="summary_vibrate">Vibrate when alarm is activate.</string>
    <string name="more_details">More Details</string>
    <string name="translation">Translation</string>
    <string name="contentdt_imageview_ocr">Image of text which your phone can seen.</string>
    <string name="username_missing">Sorry, you must supply a username to register.</string>
    <string name="password_missing">Sorry, you must supply a password to register.</string>
    <string name="username_taken">Sorry, this username has already been taken.</string>
    <string name="my_medicine_box">My medicine box</string>
    <string name="alert">Alert</string>
    <string name="medicine_type">Medicine type</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="before_meal">Before meal</string>
    <string name="after_meal">After meal</string>
    <string name="choose_your_medicine_type">Choose your medicine type.</string>
    <string name="no_alarm_activity">No alarm activity</string>
    <string name="create_a_alarm_and_it_will_be_shown_here">Create a alarm and it will be shown here.</string>
    <string name="no_medicine">No medicine</string>
    <string name="you_can_search_medicine_and_pin_for_save">You can search medicine and pin for save.</string>
    <string name="after">After</string>
    <string name="before">Before</string>
    <string name="profile_picture">Profile picture</string>
    <string name="text_to_speech">Text to speech</string>
    <string name="your_name_has_changed">Your name has changed.</string>
    <string name="password_has_changed">Password has changed.</string>
    <string name="email_has_changed">Email has changed.</string>
    <string name="email_type_wrong_message">Something was wrong ,Please check format of email again.</string>
    <string name="please_input_new_password_message">Please input your new passsowrd</string>
    <string name="please_input_your_email">Please input your email</string>
    <string name="please_input_your_name">Please input your name</string>
    <string name="profile">Profile</string>
    <string name="error_message_twitter">Something went wrong. Please check your data</string>
    <string name="results">results</string>
    <string name="please_check_your_connection">Please check your connection.</string>
    <string name="check_now">Check now!</string>
    <string name="try_again">Sorry , Please try again</string>
    <string name="characters_left">" characters left."</string>
    <string name="thank_for_feedback">Thank you for your feedback.</string>
    <string name="please_check_length_message">Please check your length of message.</string>
    <string name="username_already">Sorry, this username has already been taken.</string>
    <string name="user_missing">Sorry, you must supply a username to register.</string>
    <string name="object_not_found">Sorry, those credentials were invalid.</string>
    <string name="new_user">New user:</string>
    <string name="signed_up">" Signed up"</string>
    <string name="stop_reading">Stop reading.</string>
    <string name="reading">Reading for you.</string>
    <string name="image_of_medicine">Image of medicine</string>
    <string name="it_s_time_to_take">It\'s time to take</string>
    <string name="user_profile_pic">User Profile Picture</string>
    <string name="medicine_image">Medicine image</string>
    <string name="done">Done</string>
    <string name="medicine_name">Medicine name</string>
    <string name="description">Description</string>
    <string name="snooze_later">Snooze later.</string>
    <string name="im_done">I\'m done.</string>
    <string name="schedule_saved">Schedule has saved.</string>
    <string name="please_check_again">Please check your data again.</string>
    <string name="general_settings">General settings</string>
    <string name="recognize">Recognize</string>
    <string name="advance_settings">Advanced settings</string>
    <string name="ocr_engine">OCR engine</string>
    <string name="standard_focus_mode">Standard focus mode</string>
    <string name="toggle_flash">Toggle Flash</string>
    <string name="page_segmentation">Page segmentation</string>
    <string name="vibrate">Vibrate</string>
    <string name="ocr_settings">OCR Settings</string>
    <string name="time_settings">Time settings</string>
    <string name="spectific_settings">Specific settings</string>
    <string name="report_problem">Report Problem</string>
    <string name="edit_schedule">Edit Schedule</string>
    <string name="user">User</string>
    <string name="scan_word">Scan word</string>
</resources>