<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/spectific_settings">

        <Preference
            android:key="TIME_KEY"
            android:persistent="false"
            android:title="@string/time_settings" />

        <Preference
            android:key="OCR_KEY"
            android:persistent="false"
            android:title="@string/ocr_settings" />
    </PreferenceCategory>

    <PreferenceCategory
        android:summary="@string/PreferenceAlarmSettings"
        android:title="@string/PreferenceAlarmSettings">

        <com.app.labelswhispering.viewcontroller.preference.ExtraRingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:key="ringtone"
            android:summary="@string/ringtoneSummary"
            android:title="@string/ringtoneTitle"
            app:extraRingtoneTitles="@array/extraRingtoneTitles"
            app:extraRingtones="@array/extraRingtones"
            app:ringtoneType="notification"
            app:showDefault="true"
            app:showSilent="true" />
        <!--     <RingtonePreference
                 android:defaultValue="content://settings/system/notification_sound"
                 android:key="@string/PreferenceAlarmNoiseKey"
                 android:ringtoneType="notification|ringtone"
                 android:showDefault="true"
                 android:showSilent="false"
                 android:title="@string/PreferenceAlarmNoiseTitle" /> -->
        <EditTextPreference
            android:defaultValue="2"
            android:key="@string/PreferenceSnoozeLater"
            android:numeric="integer"
            android:summary="@string/PreferenceSnoozeLaterSummary"
            android:title="@string/PreferenceSnoozeLater" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/PreferenceShowNotificationKey"
            android:summary="@string/PreferenceShowNotificationSummary"
            android:title="@string/PreferenceShowNotificationTitle" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="vibrate"
            android:summary="@string/summary_vibrate"
            android:title="@string/vibrate" />
    </PreferenceCategory>

</PreferenceScreen>