<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Controller.MainActivity">
    <item
        android:id="@+id/action_scan_word"
        android:icon="@drawable/ic_photo_camera_white_24dp"
        android:title="@string/scan_word"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_scan_barcode"
        android:icon="@drawable/ic_center_focus_weak_white_24dp"
        android:title="@string/scan_barcode"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

</menu>
