<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tab1"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header_property"
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical"
            android:text="@string/property"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/expandable_property"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="32dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_type_property"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tvType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/btnTTS"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="#3F51B5"
                android:contentDescription="@string/text_to_speech"
                android:onClick="propertyOnClick"
                android:src="@drawable/ic_record_voice_over_blue_24dp"
                android:textAppearance="?android:attr/textAppearance" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/properties"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <WebView
                android:id="@+id/web_Property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <CheckBox
                android:id="@+id/cb_beforeMeal_pf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:checked="false"
                android:clickable="false"
                android:paddingLeft="16dp"
                android:text="@string/before_meal" />

            <CheckBox
                android:id="@+id/cb_afterMeal_pf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:checked="false"
                android:clickable="false"
                android:paddingRight="16dp"
                android:text="@string/after_meal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_often"
                android:textColor="#212121"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <CheckBox
                    android:id="@+id/cb_Morning_pf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:clickable="false"
                    android:text="@string/morning" />

                <CheckBox
                    android:id="@+id/cb_Noon_pf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:clickable="false"
                    android:text="@string/noon" />

                <CheckBox
                    android:id="@+id/cb_Evening_pf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:clickable="false"
                    android:text="@string/evening" />

                <CheckBox
                    android:id="@+id/cb_Bedtime_pf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:clickable="false"
                    android:text="@string/bedtime" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
