<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="35sp" />


    <ProgressBar
        android:id="@+id/pgbLogIn"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/parse_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/login_username"
                    style="@style/ParseLoginUI.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/login_password"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing"
                    android:fontFamily="sans-serif"
                    android:hint="@string/password_label"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/parse_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/com_parse_ui_large_vertical_spacing">

                <Button
                    android:id="@+id/sign_in"
                    style="@style/ParseLoginUI.Button"
                    android:layout_weight="0.5"
                    android:onClick="signIn"
                    android:text="@string/log_in" />

                <Button
                    android:id="@+id/registerButton"
                    style="@style/ParseLoginUI.Button"
                    android:layout_marginLeft="@dimen/com_parse_ui_small_horizontal_spacing"
                    android:layout_weight="0.5"
                    android:onClick="toRegistration"
                    android:text="@string/sign_up" />
            </LinearLayout>

            <Button
                android:id="@+id/parse_login_help"
                style="@style/ParseLoginUI.HelpButton"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:text="@string/forgot_password" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/facebook_login_button"
                style="@style/ParseLoginUI.Button.ThirdPartyLogin"
                android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing"
                android:background="@drawable/com_parse_ui_facebook_login_button_background_selector"
                android:drawableLeft="@drawable/facebook_login_logo"
                android:text="@string/facebook_login_button_label" />

            <Button
                android:id="@+id/twitter_login_button"
                style="@style/ParseLoginUI.Button.ThirdPartyLogin"
                android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing"
                android:background="@drawable/com_parse_ui_twitter_login_button_background_selector"
                android:drawableLeft="@drawable/twitter_login_logo"
                android:text="@string/twitter_login_button_label" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>